# client-shared

./: README.md
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/auth/: m2m.rs  mod.rs  oauth.rs  password.rs  refresh.rs  storage.rs
rust/src/llm/: mod.rs
rust/src/ui/: mod.rs
